--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!-- 🧠 CHALLENGER BOT DERIV REVOLUTION -->
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Challenger Bot Deriv Revolution</title>
 
+<!-- Ícones -->
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/icon.png" />
+<link rel="manifest" href="/manifest.json" />
+
+<!-- Cor do tema para dispositivos móveis -->
+<meta name="theme-color" content="#000000" />
+
+<!-- Meta descrição -->
+<meta name="description" content="Challenger Bot Deriv Revolution — Plataforma inteligente de trading automático com IA e indicadores técnicos." />
+
+<!-- Estilo principal -->
+<link rel="stylesheet" href="estilo.css" />
+
+<!-- Logotipo (para SEO e redes sociais) -->
+<meta property="og:image" content="/logo.png" />
+<meta property="og:title" content="Challenger Bot Deriv Revolution" />
+<meta property="og:description" content="Automatize suas operações na Deriv com inteligência artificial e indicadores técnicos." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://challenger-revolution.vercel.app" />
